5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1674_1107.log
== TEST (2019-04-29 20:53:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Digite aqui o dia referente a semana: "))
y = int(input("Digite aqui o dia futuro: "))
domingo = 0
segunda = 1
terca = 2
quarta = 3
quinta = 4
sexta = 5
sabado = 6
cal = (x + y) % 7
if ((x = 0) and (x = 1) and (x = 2) and (x = 3) and (x = 4) and (x = 5) and (x = 6)):
	print("Hoje eh", x, "e o dia futuro eh", y)
else:
	print("A entrada", x, "eh invalida")
	
-- ERROR:
File "XXXX", line 14
    if ((x = 0) and (x = 1) and (x = 2) and (x = 3) and (x = 4) and (x = 5) and (x = 6)):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 20:53:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Digite aqui o dia referente a semana: "))
y = int(input("Digite aqui o dia futuro: "))
domingo = 0
segunda = 1
terca = 2
quarta = 3
quinta = 4
sexta = 5
sabado = 6
cal = (x + y) % 7
if ((x = 0) and (x = 1) and (x = 2) and (x = 3) and (x = 4) and (x = 5) and (x = 6)):
	print("Hoje eh", x, "e o dia futuro eh", cal)
else:
	print("A entrada", x, "eh invalida")
	
-- ERROR:
File "XXXX", line 14
    if ((x = 0) and (x = 1) and (x = 2) and (x = 3) and (x = 4) and (x = 5) and (x = 6)):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 20:53:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Digite aqui o dia referente a semana: "))
y = int(input("Digite aqui o dia futuro: "))
domingo = 0
segunda = 1
terca = 2
quarta = 3
quinta = 4
sexta = 5
sabado = 6
cal = (x + y) % 7
if ((x == 0) and (x == 1) and (x == 2) and (x == 3) and (x == 4) and (x == 5) and (x == 6)):
	print("Hoje eh", x, "e o dia futuro eh", cal)
else:
	print("A entrada", x, "eh invalida")
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 20:55:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Digite aqui o dia referente a semana: "))
y = int(input("Digite aqui o dia futuro: "))
domingo = 0
segunda = 1
terca = 2
quarta = 3
quinta = 4
sexta = 5
sabado = 6
cal = (x + y) % 7
if ((x == domingo) and (x == segunda) and (x == terca) and (x == quinta) and (x == sexta) and (x == sabado) and (x == 6)):
	print("Hoje eh", x, "e o dia futuro eh", cal)
else:
	print("A entrada", x, "eh invalida")
	
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:16:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Digite aqui o dia referente a semana: "))
y = int(input("Digite aqui o dia futuro: "))
cal = (x + y) % 7
s = "Hoje eh"
f = "e o dia futuro eh"
if (x == 0):
	x = "domingo"
	if (cal == 0):
		cal = "domingo"
	elif ( cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 1):
	x = "segunda"
elif (x == 2):
	x = "terca"
elif (x == 3):
	x = "quarta"
elif (x == 4):
	x = "quinta"
elif (x == 5):
	x ="sexta"
elif (x == 6):
	x = "sabado"
else:
	print("A entrada", x, "eh invalida")
print(s, x, f, cal)
	

-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:17:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Digite aqui o dia referente a semana: "))
y = int(input("Digite aqui o dia futuro: "))
cal = (x + y) % 7
s = "Hoje eh"
f = "e o dia futuro eh"
if (x == 0):
	x = "domingo"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 1):
	x = "segunda"
elif (x == 2):
	x = "terca"
elif (x == 3):
	x = "quarta"
elif (x == 4):
	x = "quinta"
elif (x == 5):
	x ="sexta"
elif (x == 6):
	x = "sabado"
else:
	print("A entrada", x, "eh invalida")
print(s, x, f, cal)
	

-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:18:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Digite aqui o dia referente a semana: "))
y = int(input("Digite aqui o dia futuro: "))
cal = (x + y) % 7
s = "Hoje eh"
f = "e o dia futuro eh"
if (x == 0):
	x = "domingo"
	if (cal == 0):
		cal = "domingo"
	elif (cal == "1"):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 1):
	x = "segunda"
elif (x == 2):
	x = "terca"
elif (x == 3):
	x = "quarta"
elif (x == 4):
	x = "quinta"
elif (x == 5):
	x ="sexta"
elif (x == 6):
	x = "sabado"
else:
	print("A entrada", x, "eh invalida")
print(s, x, f, cal)
	

-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:20:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Digite aqui o dia referente a semana: "))
y = int(input("Digite aqui o dia futuro: "))
cal = (x + y) % 7
s = "Hoje eh"
f = "e o dia futuro eh"
if (x == 0):
	x = "domingo"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 1):
	x = "segunda"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 2):
	x = "terca"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 3):
	x = "quarta"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 4):
	x = "quinta"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 5):
	x ="sexta"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 6):
	x = "sabado"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
else:
	print("A entrada", x, "eh invalida")
print(s, x, f, cal)
	

-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:20:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Digite aqui o dia referente a semana: "))
y = int(input("Digite aqui o dia futuro: "))
cal = (x + y) % 7
s = "Hoje eh"
f = "e o dia futuro eh"
if (x == 0):
	x = "domingo"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 1):
	x = "segunda"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 2):
	x = "terca"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 3):
	x = "quarta"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 4):
	x = "quinta"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 5):
	x ="sexta"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 6):
	x = "sabado"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
else:
	print("A entrada", x, "eh invalida")
print(s, x, f, cal)
	

-- EXECUTION TIME:
0.183176
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 4
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:21:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Digite aqui o dia referente a semana: "))
y = int(input("Digite aqui o dia futuro: "))
cal = (x + y) % 7
s = "Hoje eh"
f = "e o dia futuro eh"
if (x == 0):
	x = "domingo"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 1):
	x = "segunda"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 2):
	x = "terca"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 3):
	x = "quarta"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 4):
	x = "quinta"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 5):
	x ="sexta"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
elif (x == 6):
	x = "sabado"
	if (cal == 0):
		cal = "domingo"
	elif (cal == 1):
		cal = "segunda"
	elif (cal == 2):
		cal = "terca"
	elif (cal == 3):
		cal = "quarta"
	elif (cal == 4):
		cal = "quinta"
	elif (cal == 5):
		cal = "sexta"
	else:
		cal = "sabado" 
else:
	print("A entrada", x, "eh invalida")
print(s, x, f, cal)
	

-- OUTPUT:
A entrada 9 eh invalida
Hoje eh 9 e o dia futuro eh 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:48:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Digite aqui o dia referente a semana: "))
y = int(input("Digite aqui o dia futuro: "))
cal = (x + y) % 7
if (x >= 0) and (x <= 6):
	if (y > 0):
		if (x == 0):
			x = "domingo"
		elif (x == 1):
			x = "segunda"
		elif (x == 2):
			x = "terca"
		elif (x == 3):
			x = "quarta"
		elif (x == 4):
			x = "quinta"
		elif (x == 5):
			x = "sexta"
		elif (x == 6):
			x = "sabado"
		if (cal == 0):
			y = "domingo"
		elif (cal == 1):
			y = "segunda"
		elif (cal == 2):
			y = "terca"
		elif (cal == 3):
			y = "quarta"
		elif (cal == 4):
			y = "quinta"
		elif (cal == 5):
			y = "sexta"
		elif (cal == 6):
			y = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", y, "eh invalida")
else:
	print("A entrada", x, "eh invalida")
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:48:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = int(input("Digite aqui o dia referente a semana: "))
y = int(input("Digite aqui o dia futuro: "))
cal = (x + y) % 7
if (x >= 0) and (x <= 6):
	if (y > 0):
		if (x == 0):
			x = "domingo"
		elif (x == 1):
			x = "segunda"
		elif (x == 2):
			x = "terca"
		elif (x == 3):
			x = "quarta"
		elif (x == 4):
			x = "quinta"
		elif (x == 5):
			x = "sexta"
		elif (x == 6):
			x = "sabado"
		if (cal == 0):
			y = "domingo"
		elif (cal == 1):
			y = "segunda"
		elif (cal == 2):
			y = "terca"
		elif (cal == 3):
			y = "quarta"
		elif (cal == 4):
			y = "quinta"
		elif (cal == 5):
			y = "sexta"
		elif (cal == 6):
			y = "sabado"
		print("Hoje eh", x, "e o dia futuro eh", y)
	else:
		print("A entrada", y, "eh invalida")
else:
	print("A entrada", x, "eh invalida")
-- EXECUTION TIME:
0.174272
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh segunda
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
